--- a/style.css
+++ b/style.css
@@ -77,7 +77,9 @@ p {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bolder;
 }
-
+#edit{
+    background-color: lightcoral;
+}
 button {
     padding: 8px;
     background-color: red;
